--- a/03-counter-app-vite/package.json
+++ b/03-counter-app-vite/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "jest": "^29.6.4",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "whatwg-fetch": "^3.6.19"
   }
 }
