--- a/03-counter-app-vite/package.json
+++ b/03-counter-app-vite/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@babel/core": "^7.22.17",
     "@babel/preset-env": "^7.22.15",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.4",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
