--- a/03-counter-app-vite/package.json
+++ b/03-counter-app-vite/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@babel/core": "^7.22.17",
     "@babel/preset-env": "^7.22.15",
+    "@babel/preset-react": "^7.22.15",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.4",
     "@types/react": "^18.0.37",
@@ -29,6 +30,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.7.0",
     "vite": "^4.3.9",
     "whatwg-fetch": "^3.6.19"
   }
